@@ -1,4 +1,4 @@
 #Abator build version info
-#Fri Sep 28 16:20:34 CDT 2007
+#Sat Nov 17 19:58:51 CST 2007
 version=1.1.0
-buildNum=393
+buildNum=395
