@@ -65,6 +65,7 @@
     reference page for more information.</li>
   <li>Fixed bug - incorrect datatype mapping for JDBC BIT datatype</li>
   <li>Made the generated Example and Criteria classes extendable</li>
+  <li>Made the legacy DAOs extendable</li>
 </ul>
 
 <h2>Version 1.0.0</h2>
